crates/daml-syntax/tests/compile_fail/api_non_exhaustive_enum_matches.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/compile_fail/api_non_exhaustive_enum_matches.rs:9:11
   |
 9 |     match diagnostic.end_column() {
   |           ^^^^^^^^^^^^^^^^^^^^^^^ pattern `_` not covered
   |
note: `DiagnosticEndColumn` defined here
  --> src/lib.rs
   |
   | pub enum DiagnosticEndColumn {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `DiagnosticEndColumn`
   = note: `DiagnosticEndColumn` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
12 ~         DiagnosticEndColumn::EmptySpan => {},
13 +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/compile_fail/api_non_exhaustive_enum_matches.rs:16:11
   |
16 |     match kind {
   |           ^^^^ pattern `_` not covered
   |
note: `CoordinateRangeErrorKind` defined here
  --> src/lib.rs
   |
   | pub enum CoordinateRangeErrorKind {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `CoordinateRangeErrorKind`
   = note: `CoordinateRangeErrorKind` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
18 ~         CoordinateRangeErrorKind::ColumnOutOfRange => {},
19 +         _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/compile_fail/api_non_exhaustive_enum_matches.rs:22:11
   |
22 |     match span_kind {
   |           ^^^^^^^^^ pattern `_` not covered
   |
note: `ParserSpanToTextRangeErrorKind` defined here
  --> src/lib.rs
   |
   | pub enum ParserSpanToTextRangeErrorKind {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ParserSpanToTextRangeErrorKind`
   = note: `ParserSpanToTextRangeErrorKind` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
26 ~         ParserSpanToTextRangeErrorKind::TextSizeOverflow => {},
27 +         _ => todo!()
   |
